--- a/index.html
+++ b/index.html
@@ -16,15 +16,13 @@
       <span id="liters">1.5L</span>
       <small>Remained</small>
     </div>
-    <div class="percentage" id="percentage">
-      20%
-    </div>
+    <div class="percentage" id="percentage"></div>
   </div>
 
   <p class="text">Select how many glasses of water that you have drank</p>
   <div class="cups">
-    <div class="cup cup-small full">250 ml</div>
-    <div class="cup cup-small full" full></div>
+    <div class="cup cup-small">250 ml</div>
+    <div class="cup cup-small" full></div>
     <div class="cup cup-small"></div>
     <div class="cup cup-small"></div>
     <div class="cup cup-small"></div>
