--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
   <div class="cup">
     <div class="remained" id="remained">
-      <span id="liters">1.5L</span>
+      <span id="liters"></span>
       <small>Remained</small>
     </div>
     <div class="percentage" id="percentage"></div>
@@ -22,13 +22,13 @@
   <p class="text">Select how many glasses of water that you have drank</p>
   <div class="cups">
     <div class="cup cup-small">250 ml</div>
-    <div class="cup cup-small" full></div>
-    <div class="cup cup-small"></div>
-    <div class="cup cup-small"></div>
-    <div class="cup cup-small"></div>
-    <div class="cup cup-small"></div>
-    <div class="cup cup-small"></div>
-    <div class="cup cup-small"></div>
+    <div class="cup cup-small" full>250 ml</div>
+    <div class="cup cup-small">250 ml</div>
+    <div class="cup cup-small">250 ml</div>
+    <div class="cup cup-small">250 ml</div>
+    <div class="cup cup-small">250 ml</div>
+    <div class="cup cup-small">250 ml</div>
+    <div class="cup cup-small">250 ml</div>
   </div>
   
   <script src="app.js"></script>
